fix the issue in  data_ingest script

--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -112,15 +112,30 @@
     "\n",
     "\n",
     "# =====================================================================\n",
-    "# STEP 5: ONE-HOT ENCODING\n",
+    "# STEP 5: ONE-HOT ENCODING (FIXED FOR DATABRICKS REPOS)\n",
     "# =====================================================================\n",
     "def onehot_encoding(df):\n",
     "    print(\"🔥 One-hot encoding...\")\n",
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    indexers = [StringIndexer(inputCol=c, outputCol=f\"{c}_index\", handleInvalid=\"keep\") for c in nominal_cols]\n",
-    "    encoders = [OneHotEncoder(inputCol=f\"{c}_index\", outputCol=f\"{c}_vec\", dropLast=True) for c in nominal_cols]\n",
+    "    # ✅ FIX: Use builder pattern (.setInputCol() instead of inputCol=)\n",
+    "    indexers = [\n",
+    "        StringIndexer()\n",
+    "        .setInputCol(c)\n",
+    "        .setOutputCol(f\"{c}_index\")\n",
+    "        .setHandleInvalid(\"keep\") \n",
+    "        for c in nominal_cols\n",
+    "    ]\n",
+    "    \n",
+    "    # ✅ FIX: Use builder pattern for OneHotEncoder too\n",
+    "    encoders = [\n",
+    "        OneHotEncoder()\n",
+    "        .setInputCol(f\"{c}_index\")\n",
+    "        .setOutputCol(f\"{c}_vec\")\n",
+    "        .setDropLast(True)\n",
+    "        for c in nominal_cols\n",
+    "    ]\n",
     "\n",
     "    pipeline = Pipeline(stages=indexers + encoders)\n",
     "    model = pipeline.fit(df)\n",
@@ -169,7 +184,7 @@
     "    print(\"\\n🎉 Pipeline complete!\")\n",
     "    print(f\"Rows: {processed_df.count():,}\")\n",
     "    processed_df.printSchema()\n",
-    "    processed_df.display(5)\n"
+    "    processed_df.display(5)"
    ]
   }
  ],
