--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -115,36 +115,33 @@
     "# STEP 5: ONE-HOT ENCODING (FIXED FOR DATABRICKS REPOS)\n",
     "# =====================================================================\n",
     "def onehot_encoding(df):\n",
-    "    print(\"🔥 One-hot encoding...\")\n",
+    "    print(\"🔥 Applying Repo-safe OneHot Encoding...\")\n",
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    # ✅ FIX: Use builder pattern (.setInputCol() instead of inputCol=)\n",
-    "    indexers = [\n",
-    "        StringIndexer()\n",
-    "        .setInputCol(c)\n",
-    "        .setOutputCol(f\"{c}_index\")\n",
-    "        .setHandleInvalid(\"keep\") \n",
-    "        for c in nominal_cols\n",
-    "    ]\n",
-    "    \n",
-    "    # ✅ FIX: Use builder pattern for OneHotEncoder too\n",
-    "    encoders = [\n",
-    "        OneHotEncoder()\n",
-    "        .setInputCol(f\"{c}_index\")\n",
-    "        .setOutputCol(f\"{c}_vec\")\n",
-    "        .setDropLast(True)\n",
-    "        for c in nominal_cols\n",
-    "    ]\n",
+    "    # Databricks Repo allowed format (single bulk transformer)\n",
+    "    indexer = StringIndexer(\n",
+    "        inputCols=nominal_cols,\n",
+    "        outputCols=[f\"{c}_index\" for c in nominal_cols],\n",
+    "        handleInvalid=\"keep\"\n",
+    "    )\n",
     "\n",
-    "    pipeline = Pipeline(stages=indexers + encoders)\n",
+    "    encoder = OneHotEncoder(\n",
+    "        inputCols=[f\"{c}_index\" for c in nominal_cols],\n",
+    "        outputCols=[f\"{c}_vec\" for c in nominal_cols],\n",
+    "        dropLast=True\n",
+    "    )\n",
+    "\n",
+    "    pipeline = Pipeline(stages=[indexer, encoder])\n",
     "    model = pipeline.fit(df)\n",
     "    df = model.transform(df)\n",
     "\n",
+    "    # Remove original nominal + index columns, keep only vectors\n",
     "    df = df.drop(*nominal_cols, *[f\"{c}_index\" for c in nominal_cols])\n",
     "\n",
-    "    print(\"✅ One-hot encoding done\")\n",
+    "    print(\"✅ One-hot encoding complete\")\n",
     "    return df\n",
+    "\n",
     "\n",
     "\n",
     "# =====================================================================\n",
