--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -119,18 +119,17 @@
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    # Databricks Repo allowed format (single bulk transformer)\n",
-    "    indexer = StringIndexer(\n",
-    "        inputCols=nominal_cols,\n",
-    "        outputCols=[f\"{c}_index\" for c in nominal_cols],\n",
-    "        handleInvalid=\"keep\"\n",
-    "    )\n",
+    "    # FIX: Use default constructors, then set parameters with setters\n",
+    "    # This avoids Databricks Repos security restrictions on parameterized constructors\n",
+    "    indexer = StringIndexer()\n",
+    "    indexer.setInputCols(nominal_cols)\n",
+    "    indexer.setOutputCols([f\"{c}_index\" for c in nominal_cols])\n",
+    "    indexer.setHandleInvalid(\"keep\")\n",
     "\n",
-    "    encoder = OneHotEncoder(\n",
-    "        inputCols=[f\"{c}_index\" for c in nominal_cols],\n",
-    "        outputCols=[f\"{c}_vec\" for c in nominal_cols],\n",
-    "        dropLast=True\n",
-    "    )\n",
+    "    encoder = OneHotEncoder()\n",
+    "    encoder.setInputCols([f\"{c}_index\" for c in nominal_cols])\n",
+    "    encoder.setOutputCols([f\"{c}_vec\" for c in nominal_cols])\n",
+    "    encoder.setDropLast(True)\n",
     "\n",
     "    pipeline = Pipeline(stages=[indexer, encoder])\n",
     "    model = pipeline.fit(df)\n",
@@ -143,7 +142,6 @@
     "    return df\n",
     "\n",
     "\n",
-    "\n",
     "# =====================================================================\n",
     "# STEP 6: STANDARD SCALING\n",
     "# =====================================================================\n",
@@ -152,8 +150,16 @@
     "\n",
     "    feature_cols = [c for c in df.columns if c != \"label\"]\n",
     "\n",
-    "    assembler = VectorAssembler(inputCols=feature_cols, outputCol=\"unscaled_features\")\n",
-    "    scaler = StandardScaler(inputCol=\"unscaled_features\", outputCol=\"features\", withMean=True, withStd=True)\n",
+    "    # FIX: Use default constructors then set parameters\n",
+    "    assembler = VectorAssembler()\n",
+    "    assembler.setInputCols(feature_cols)\n",
+    "    assembler.setOutputCol(\"unscaled_features\")\n",
+    "    \n",
+    "    scaler = StandardScaler()\n",
+    "    scaler.setInputCol(\"unscaled_features\")\n",
+    "    scaler.setOutputCol(\"features\")\n",
+    "    scaler.setWithMean(True)\n",
+    "    scaler.setWithStd(True)\n",
     "\n",
     "    pipeline = Pipeline(stages=[assembler, scaler])\n",
     "    model = pipeline.fit(df)\n",
