--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -119,24 +119,31 @@
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    # FIX: Use default constructors, then set parameters with setters\n",
-    "    # This avoids Databricks Repos security restrictions on parameterized constructors\n",
-    "    indexer = StringIndexer()\n",
-    "    indexer.setInputCols(nominal_cols)\n",
-    "    indexer.setOutputCols([f\"{c}_index\" for c in nominal_cols])\n",
-    "    indexer.setHandleInvalid(\"keep\")\n",
-    "\n",
-    "    encoder = OneHotEncoder()\n",
-    "    encoder.setInputCols([f\"{c}_index\" for c in nominal_cols])\n",
-    "    encoder.setOutputCols([f\"{c}_vec\" for c in nominal_cols])\n",
-    "    encoder.setDropLast(True)\n",
-    "\n",
-    "    pipeline = Pipeline(stages=[indexer, encoder])\n",
-    "    model = pipeline.fit(df)\n",
-    "    df = model.transform(df)\n",
-    "\n",
+    "    # FIX: Apply transformations sequentially without Pipeline\n",
+    "    # This avoids Databricks Repos security restrictions\n",
+    "    \n",
+    "    # Step 1: StringIndexer for each column\n",
+    "    for col_name in nominal_cols:\n",
+    "        indexer = StringIndexer(\n",
+    "            inputCol=col_name,\n",
+    "            outputCol=f\"{col_name}_index\",\n",
+    "            handleInvalid=\"keep\"\n",
+    "        )\n",
+    "        df = indexer.fit(df).transform(df)\n",
+    "    \n",
+    "    # Step 2: OneHotEncoder for all indexed columns\n",
+    "    index_cols = [f\"{c}_index\" for c in nominal_cols]\n",
+    "    vec_cols = [f\"{c}_vec\" for c in nominal_cols]\n",
+    "    \n",
+    "    encoder = OneHotEncoder(\n",
+    "        inputCols=index_cols,\n",
+    "        outputCols=vec_cols,\n",
+    "        dropLast=True\n",
+    "    )\n",
+    "    df = encoder.fit(df).transform(df)\n",
+    "    \n",
     "    # Remove original nominal + index columns, keep only vectors\n",
-    "    df = df.drop(*nominal_cols, *[f\"{c}_index\" for c in nominal_cols])\n",
+    "    df = df.drop(*nominal_cols, *index_cols)\n",
     "\n",
     "    print(\"✅ One-hot encoding complete\")\n",
     "    return df\n",
@@ -150,23 +157,22 @@
     "\n",
     "    feature_cols = [c for c in df.columns if c != \"label\"]\n",
     "\n",
-    "    # FIX: Use default constructors then set parameters\n",
-    "    assembler = VectorAssembler()\n",
-    "    assembler.setInputCols(feature_cols)\n",
-    "    assembler.setOutputCol(\"unscaled_features\")\n",
+    "    # Step 1: Assemble features\n",
+    "    assembler = VectorAssembler(inputCols=feature_cols, outputCol=\"unscaled_features\")\n",
+    "    df = assembler.transform(df)\n",
     "    \n",
-    "    scaler = StandardScaler()\n",
-    "    scaler.setInputCol(\"unscaled_features\")\n",
-    "    scaler.setOutputCol(\"features\")\n",
-    "    scaler.setWithMean(True)\n",
-    "    scaler.setWithStd(True)\n",
-    "\n",
-    "    pipeline = Pipeline(stages=[assembler, scaler])\n",
-    "    model = pipeline.fit(df)\n",
-    "    df = model.transform(df).select(\"features\", \"label\")\n",
+    "    # Step 2: Scale features\n",
+    "    scaler = StandardScaler(\n",
+    "        inputCol=\"unscaled_features\",\n",
+    "        outputCol=\"features\",\n",
+    "        withMean=True,\n",
+    "        withStd=True\n",
+    "    )\n",
+    "    scaler_model = scaler.fit(df)\n",
+    "    df = scaler_model.transform(df).select(\"features\", \"label\")\n",
     "\n",
     "    print(\"✅ Scaling complete\")\n",
-    "    return df, model\n",
+    "    return df, scaler_model\n",
     "\n",
     "\n",
     "# =====================================================================\n",
@@ -187,7 +193,7 @@
     "    print(\"\\n🎉 Pipeline complete!\")\n",
     "    print(f\"Rows: {processed_df.count():,}\")\n",
     "    processed_df.printSchema()\n",
-    "    processed_df.display(5)"
+    "    processed_df.show(5)"
    ]
   }
  ],
