--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -112,17 +112,14 @@
     "\n",
     "\n",
     "# =====================================================================\n",
-    "# STEP 5: ONE-HOT ENCODING (FIXED FOR DATABRICKS REPOS)\n",
+    "# STEP 5: ONE-HOT ENCODING\n",
     "# =====================================================================\n",
     "def onehot_encoding(df):\n",
-    "    print(\"🔥 Applying Repo-safe OneHot Encoding...\")\n",
+    "    print(\"🔥 One-hot encoding...\")\n",
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    # FIX: Apply transformations sequentially without Pipeline\n",
-    "    # This avoids Databricks Repos security restrictions\n",
-    "    \n",
-    "    # Step 1: StringIndexer for each column\n",
+    "    # Step 1: Apply StringIndexer per column (Repos-safe)\n",
     "    for col_name in nominal_cols:\n",
     "        indexer = StringIndexer(\n",
     "            inputCol=col_name,\n",
@@ -130,20 +127,18 @@
     "            handleInvalid=\"keep\"\n",
     "        )\n",
     "        df = indexer.fit(df).transform(df)\n",
-    "    \n",
-    "    # Step 2: OneHotEncoder for all indexed columns\n",
-    "    index_cols = [f\"{c}_index\" for c in nominal_cols]\n",
-    "    vec_cols = [f\"{c}_vec\" for c in nominal_cols]\n",
-    "    \n",
-    "    encoder = OneHotEncoder(\n",
-    "        inputCols=index_cols,\n",
-    "        outputCols=vec_cols,\n",
-    "        dropLast=True\n",
-    "    )\n",
-    "    df = encoder.fit(df).transform(df)\n",
-    "    \n",
-    "    # Remove original nominal + index columns, keep only vectors\n",
-    "    df = df.drop(*nominal_cols, *index_cols)\n",
+    "\n",
+    "    # Step 2: Apply OneHotEncoder per indexed column (Repos-safe)\n",
+    "    for col_name in nominal_cols:\n",
+    "        encoder = OneHotEncoder(\n",
+    "            inputCol=f\"{col_name}_index\",\n",
+    "            outputCol=f\"{col_name}_vec\",\n",
+    "            dropLast=True\n",
+    "        )\n",
+    "        df = encoder.fit(df).transform(df)\n",
+    "\n",
+    "    # Drop original and index columns\n",
+    "    df = df.drop(*nominal_cols, *[f\"{c}_index\" for c in nominal_cols])\n",
     "\n",
     "    print(\"✅ One-hot encoding complete\")\n",
     "    return df\n",
@@ -157,22 +152,15 @@
     "\n",
     "    feature_cols = [c for c in df.columns if c != \"label\"]\n",
     "\n",
-    "    # Step 1: Assemble features\n",
     "    assembler = VectorAssembler(inputCols=feature_cols, outputCol=\"unscaled_features\")\n",
-    "    df = assembler.transform(df)\n",
-    "    \n",
-    "    # Step 2: Scale features\n",
-    "    scaler = StandardScaler(\n",
-    "        inputCol=\"unscaled_features\",\n",
-    "        outputCol=\"features\",\n",
-    "        withMean=True,\n",
-    "        withStd=True\n",
-    "    )\n",
-    "    scaler_model = scaler.fit(df)\n",
-    "    df = scaler_model.transform(df).select(\"features\", \"label\")\n",
+    "    scaler = StandardScaler(inputCol=\"unscaled_features\", outputCol=\"features\", withMean=True, withStd=True)\n",
+    "\n",
+    "    pipeline = Pipeline(stages=[assembler, scaler])\n",
+    "    model = pipeline.fit(df)\n",
+    "    df = model.transform(df).select(\"features\", \"label\")\n",
     "\n",
     "    print(\"✅ Scaling complete\")\n",
-    "    return df, scaler_model\n",
+    "    return df, model\n",
     "\n",
     "\n",
     "# =====================================================================\n",
@@ -193,7 +181,7 @@
     "    print(\"\\n🎉 Pipeline complete!\")\n",
     "    print(f\"Rows: {processed_df.count():,}\")\n",
     "    processed_df.printSchema()\n",
-    "    processed_df.show(5)"
+    "    processed_df.display(5)\n"
    ]
   }
  ],
