--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -11,12 +11,15 @@
     "from pyspark.sql.functions import col, when, round, regexp_replace, trim\n",
     "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler, StandardScaler\n",
     "from pyspark.ml import Pipeline\n",
+    "import mlflow\n",
     "\n",
     "\n",
     "# =====================================================================\n",
     "# CONFIG\n",
     "# =====================================================================\n",
     "INPUT_DELTA_TABLE = \"workspace.ml_credit_risk.credit_risk_data\"\n",
+    "OUTPUT_DELTA_TABLE = \"workspace.ml_credit_risk.credit_risk_preprocessed\"\n",
+    "MODEL_REGISTRY_PATH = \"dbfs:/ml_models/credit_risk/preprocessing_pipeline\"\n",
     "\n",
     "\n",
     "# =====================================================================\n",
@@ -49,7 +52,7 @@
     "\n",
     "\n",
     "# =====================================================================\n",
-    "# STEP 2: UNIT CLEANUP (KEEP SAME COLUMN NAMES)\n",
+    "# STEP 2: UNIT CLEANUP\n",
     "# =====================================================================\n",
     "def cleanup_units(df):\n",
     "    print(\"🧹 Cleaning units...\")\n",
@@ -58,7 +61,6 @@
     "    df = df.withColumn(\"savings_balance\", trim(regexp_replace(col(\"savings_balance\"), r\"\\s*DM\\s*$\", \"\")))\n",
     "    df = df.withColumn(\"employment_duration\", trim(regexp_replace(col(\"employment_duration\"), r\"\\s*years?\\s*$\", \"\")))\n",
     "\n",
-    "    # Replace blanks with \"unknown\"\n",
     "    df = df.replace(\"\", \"unknown\")\n",
     "    \n",
     "    print(\"✅ Unit cleanup done\")\n",
@@ -119,29 +121,17 @@
     "\n",
     "    nominal_cols = ['purpose', 'other_credit', 'housing', 'job', 'phone']\n",
     "\n",
-    "    # Step 1: Apply StringIndexer per column (Repos-safe)\n",
-    "    for col_name in nominal_cols:\n",
-    "        indexer = StringIndexer(\n",
-    "            inputCol=col_name,\n",
-    "            outputCol=f\"{col_name}_index\",\n",
-    "            handleInvalid=\"keep\"\n",
-    "        )\n",
-    "        df = indexer.fit(df).transform(df)\n",
+    "    indexers = [StringIndexer(inputCol=c, outputCol=f\"{c}_index\", handleInvalid=\"keep\") for c in nominal_cols]\n",
+    "    encoders = [OneHotEncoder(inputCol=f\"{c}_index\", outputCol=f\"{c}_vec\", dropLast=True) for c in nominal_cols]\n",
     "\n",
-    "    # Step 2: Apply OneHotEncoder per indexed column (Repos-safe)\n",
-    "    for col_name in nominal_cols:\n",
-    "        encoder = OneHotEncoder(\n",
-    "            inputCol=f\"{col_name}_index\",\n",
-    "            outputCol=f\"{col_name}_vec\",\n",
-    "            dropLast=True\n",
-    "        )\n",
-    "        df = encoder.fit(df).transform(df)\n",
+    "    pipeline = Pipeline(stages=indexers + encoders)\n",
+    "    model = pipeline.fit(df)\n",
+    "    df = model.transform(df)\n",
     "\n",
-    "    # Drop original and index columns\n",
     "    df = df.drop(*nominal_cols, *[f\"{c}_index\" for c in nominal_cols])\n",
     "\n",
-    "    print(\"✅ One-hot encoding complete\")\n",
-    "    return df\n",
+    "    print(\"✅ One-hot encoding done\")\n",
+    "    return df, model\n",
     "\n",
     "\n",
     "# =====================================================================\n",
@@ -164,24 +154,76 @@
     "\n",
     "\n",
     "# =====================================================================\n",
+    "# STEP 7: SAVE TO DELTA TABLE\n",
+    "# =====================================================================\n",
+    "def save_to_delta(df, table_name: str):\n",
+    "    print(f\"💾 Saving to Delta table: {table_name}\")\n",
+    "    \n",
+    "    # Overwrite mode - replace existing data\n",
+    "    df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(table_name)\n",
+    "    \n",
+    "    row_count = df.count()\n",
+    "    print(f\"✅ Saved {row_count:,} rows to {table_name}\")\n",
+    "    \n",
+    "    return row_count\n",
+    "\n",
+    "\n",
+    "# =====================================================================\n",
+    "# STEP 8: SAVE PIPELINE MODELS (OPTIONAL - FOR INFERENCE)\n",
+    "# =====================================================================\n",
+    "def save_pipeline_models(onehot_model, scaler_model, model_path: str):\n",
+    "    print(f\"💾 Saving preprocessing pipeline to: {model_path}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Save OneHot pipeline\n",
+    "        onehot_model.write().overwrite().save(f\"{model_path}/onehot_pipeline\")\n",
+    "        \n",
+    "        # Save Scaler pipeline\n",
+    "        scaler_model.write().overwrite().save(f\"{model_path}/scaler_pipeline\")\n",
+    "        \n",
+    "        print(\"✅ Pipeline models saved successfully\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Warning: Could not save pipeline models: {e}\")\n",
+    "\n",
+    "\n",
+    "# =====================================================================\n",
     "# MAIN EXECUTION\n",
     "# =====================================================================\n",
     "if __name__ == \"__main__\":\n",
-    "    print(\"\\n🚀 CREDIT RISK PIPELINE STARTING\\n\")\n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"🚀 CREDIT RISK PREPROCESSING PIPELINE\")\n",
+    "    print(\"=\"*70 + \"\\n\")\n",
     "    \n",
     "    spark = initialize_spark()\n",
     "\n",
+    "    # Step 1-4: Basic preprocessing\n",
     "    df = ingest_data(spark, INPUT_DELTA_TABLE)\n",
     "    df = cleanup_units(df)\n",
     "    df = prepare_data(df)\n",
     "    df = ordinal_encoding(df)\n",
-    "    df = onehot_encoding(df)\n",
+    "    \n",
+    "    # Step 5: One-hot encoding (returns model too)\n",
+    "    df, onehot_model = onehot_encoding(df)\n",
+    "    \n",
+    "    # Step 6: Standard scaling (returns model too)\n",
     "    processed_df, scaler_model = apply_standard_scaling(df)\n",
     "\n",
-    "    print(\"\\n🎉 Pipeline complete!\")\n",
-    "    print(f\"Rows: {processed_df.count():,}\")\n",
+    "    # Step 7: Save preprocessed data to Delta table\n",
+    "    row_count = save_to_delta(processed_df, OUTPUT_DELTA_TABLE)\n",
+    "    \n",
+    "    # Step 8: Save pipeline models (optional - for future inference)\n",
+    "    save_pipeline_models(onehot_model, scaler_model, MODEL_REGISTRY_PATH)\n",
+    "\n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"🎉 PIPELINE COMPLETE!\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(f\"✅ Preprocessed data saved to: {OUTPUT_DELTA_TABLE}\")\n",
+    "    print(f\"✅ Total rows: {row_count:,}\")\n",
+    "    print(f\"✅ Pipeline models saved to: {MODEL_REGISTRY_PATH}\")\n",
+    "    print(\"\\n📊 Schema:\")\n",
     "    processed_df.printSchema()\n",
-    "    processed_df.display(5)\n"
+    "    print(\"\\n📋 Sample data:\")\n",
+    "    processed_df.show(5, truncate=False)"
    ]
   }
  ],
