--- a/dev_layer/data_prepration_and_ingestion.ipynb
+++ b/dev_layer/data_prepration_and_ingestion.ipynb
@@ -19,8 +19,7 @@
     "# =====================================================================\n",
     "INPUT_DELTA_TABLE = \"workspace.ml_credit_risk.credit_risk_data\"\n",
     "OUTPUT_DELTA_TABLE = \"workspace.ml_credit_risk.credit_risk_preprocessed\"\n",
-    "MODEL_REGISTRY_PATH = \"dbfs:/ml_models/credit_risk/preprocessing_pipeline\"\n",
-    "\n",
+    "MODEL_REGISTRY_PATH = \"/Volumes/workspace/ml_credit_risk/ml_artifacts/preprocessing_pipeline\"\n",
     "\n",
     "# =====================================================================\n",
     "# SPARK INITIALIZATION\n",
@@ -223,7 +222,7 @@
     "    print(\"\\n📊 Schema:\")\n",
     "    processed_df.printSchema()\n",
     "    print(\"\\n📋 Sample data:\")\n",
-    "    processed_df.show(5, truncate=False)"
+    "    processed_df.display(5, truncate=False)"
    ]
   }
  ],
