fix and add script

--- a/dev_layer/train.ipynb
+++ b/dev_layer/train.ipynb
@@ -11,20 +11,15 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks notebook source\n",
+    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FIXED VERSION\n",
     "# ==================================================================================\n",
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - CONFIG DRIVEN\n",
+    "# ✅ Uses PREPROCESSED data from data_preparation.py output\n",
+    "# ✅ Fully integrated with pipeline_config.yml and experiments.yml\n",
+    "# ✅ Handles PySpark Vector format from preprocessing\n",
+    "# ✅ Logs all experiments to MLflow\n",
     "# ==================================================================================\n",
-    "# Fully integrated with pipeline_config.yml and config.yml\n",
-    "# Supports Random Forest Classifier with preprocessing pipeline\n",
-    "# Logs all experiments to MLflow and evaluates classification metrics\n",
-    "# ==================================================================================\n",
-    "\n",
-    "# COMMAND ----------\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
-    "\n",
-    "# COMMAND ----------\n",
     "\n",
     "import mlflow\n",
     "import yaml\n",
@@ -41,16 +36,16 @@
     ")\n",
     "from mlflow.models.signature import infer_signature\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.linalg import VectorUDT, Vectors\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🚀 CREDIT RISK CLASSIFICATION TRAINING PIPELINE\")\n",
     "print(\"=\" * 80)\n",
-    "\n",
-    "# ==================================================================================\n",
+    " \n",
     "# ✅ LOAD PIPELINE CONFIGURATION\n",
-    "# ==================================================================================\n",
+    "\n",
     "print(\"\\n📋 Step 1: Loading pipeline configuration...\")\n",
     "\n",
     "try:\n",
@@ -67,10 +62,11 @@
     "    MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
     "    RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
     "\n",
-    "    # Data configuration\n",
-    "    INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
-    "    FEATURE_COLS = pipeline_cfg[\"data\"][\"features\"]\n",
-    "    LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
+    "    # ✅ FIXED: Use preprocessed table instead of raw data\n",
+    "    PREPROCESSED_TABLE = pipeline_cfg[\"data\"][\"preprocessed_table\"]\n",
+    "    LABEL_COL = \"label\"  # Preprocessed data has 'features' and 'label' columns\n",
+    "    \n",
+    "    # Data split config\n",
     "    TEST_SIZE = pipeline_cfg[\"data\"][\"split\"][\"test_size\"]\n",
     "    RANDOM_STATE = pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     "    STRATIFY = pipeline_cfg[\"data\"][\"split\"][\"stratify\"]\n",
@@ -86,9 +82,7 @@
     "    print(f\"\\n📊 Configuration Summary:\")\n",
     "    print(f\"   Model Type: {MODEL_TYPE.upper()}\")\n",
     "    print(f\"   Experiment: {EXPERIMENT_NAME}\")\n",
-    "    print(f\"   Input Table: {INPUT_TABLE}\")\n",
-    "    print(f\"   Features: {len(FEATURE_COLS)} columns\")\n",
-    "    print(f\"   Label: {LABEL_COL}\")\n",
+    "    print(f\"   Preprocessed Table: {PREPROCESSED_TABLE}\")\n",
     "    print(f\"   Primary Metric: {PRIMARY_METRIC}\")\n",
     "    print(f\"   Test Split: {TEST_SIZE * 100}%\")\n",
     "\n",
@@ -101,11 +95,10 @@
     "    raise\n",
     "\n",
     "print(\"=\" * 80)\n",
+    " \n",
+    "# ✅ LOAD EXPERIMENT CONFIGURATIONS (experiments.yml)\n",
     "\n",
-    "# ==================================================================================\n",
-    "# ✅ LOAD EXPERIMENT CONFIGURATIONS (config.yml)\n",
-    "# ==================================================================================\n",
-    "def load_experiment_configs(path=\"config.yml\"):\n",
+    "def load_experiment_configs(path=\"experiments.yml\"):\n",
     "    \"\"\"Load Random Forest hyperparameter configurations\"\"\"\n",
     "    print(f\"\\n📄 Step 2: Loading experiment configurations from {path}...\")\n",
     "    \n",
@@ -123,66 +116,83 @@
     "\n",
     "    except FileNotFoundError:\n",
     "        print(f\"❌ ERROR: {path} not found!\")\n",
-    "        print(\"💡 Please create config.yml with Random Forest configurations\")\n",
+    "        print(\"💡 Please create experiments.yml with Random Forest configurations\")\n",
     "        raise\n",
     "    except Exception as e:\n",
     "        print(f\"❌ ERROR loading experiment configs: {e}\")\n",
     "        raise\n",
+    " \n",
+    "# ✅ CONVERT SPARK VECTOR TO NUMPY ARRAY\n",
     "\n",
-    "# ==================================================================================\n",
-    "# ✅ DATA LOADING FROM DELTA TABLE\n",
-    "# ==================================================================================\n",
-    "def load_data(spark):\n",
+    "def vector_to_array(v):\n",
+    "    \"\"\"Convert PySpark ML Vector to numpy array\"\"\"\n",
+    "    if v is None:\n",
+    "        return None\n",
+    "    return v.toArray() if hasattr(v, 'toArray') else np.array(v)\n",
+    " \n",
+    "# ✅ DATA LOADING FROM PREPROCESSED DELTA TABLE\n",
+    "\n",
+    "def load_preprocessed_data(spark):\n",
     "    \"\"\"\n",
-    "    Load and prepare data from Delta table\n",
-    "    Returns: X (features), y (labels) as pandas DataFrames\n",
+    "    Load preprocessed data from Delta table\n",
+    "    Handles PySpark Vector format from data_preparation.py\n",
+    "    \n",
+    "    Returns: X (features), y (labels) as numpy arrays\n",
     "    \"\"\"\n",
-    "    print(f\"\\n📦 Step 3: Loading data from Delta table...\")\n",
-    "    print(f\"   Table: {INPUT_TABLE}\")\n",
+    "    print(f\"\\n📦 Step 3: Loading PREPROCESSED data from Delta table...\")\n",
+    "    print(f\"   Table: {PREPROCESSED_TABLE}\")\n",
     "    \n",
     "    try:\n",
     "        # Read from Delta\n",
-    "        df = spark.read.format(\"delta\").table(INPUT_TABLE)\n",
+    "        df = spark.read.format(\"delta\").table(PREPROCESSED_TABLE)\n",
     "        \n",
-    "        # Select features and label\n",
-    "        df_selected = df.select(*FEATURE_COLS, LABEL_COL)\n",
+    "        # Check schema\n",
+    "        print(f\"\\n📊 Schema:\")\n",
+    "        df.printSchema()\n",
     "        \n",
     "        # Convert to pandas\n",
-    "        df_pd = df_selected.toPandas()\n",
+    "        df_pd = df.toPandas()\n",
     "        \n",
-    "        # Separate features and labels\n",
-    "        X = df_pd[FEATURE_COLS]\n",
-    "        y = df_pd[LABEL_COL]\n",
-    "        \n",
-    "        # Convert label to binary if string\n",
-    "        if y.dtype == 'object':\n",
-    "            y = (y == 'yes').astype(int)\n",
-    "        \n",
-    "        print(f\"✅ Data loaded successfully!\")\n",
+    "        print(f\"\\n✅ Data loaded successfully!\")\n",
     "        print(f\"   Total samples: {len(df_pd):,}\")\n",
+    "        print(f\"   Columns: {list(df_pd.columns)}\")\n",
+    "        \n",
+    "        # Extract features and labels\n",
+    "        # 'features' column is a PySpark Vector, need to convert to numpy\n",
+    "        print(f\"\\n🔄 Converting PySpark Vectors to numpy arrays...\")\n",
+    "        \n",
+    "        X = np.array([vector_to_array(row) for row in df_pd['features']])\n",
+    "        y = df_pd['label'].values\n",
+    "        \n",
+    "        print(f\"✅ Conversion complete!\")\n",
     "        print(f\"   Features shape: {X.shape}\")\n",
-    "        print(f\"   Label distribution:\")\n",
-    "        print(f\"      Class 0 (No Default): {(y == 0).sum():,} ({(y == 0).sum() / len(y) * 100:.1f}%)\")\n",
-    "        print(f\"      Class 1 (Default): {(y == 1).sum():,} ({(y == 1).sum() / len(y) * 100:.1f}%)\")\n",
+    "        print(f\"   Labels shape: {y.shape}\")\n",
+    "        \n",
+    "        # Check label distribution\n",
+    "        unique_labels, counts = np.unique(y, return_counts=True)\n",
+    "        print(f\"\\n📊 Label distribution:\")\n",
+    "        for label, count in zip(unique_labels, counts):\n",
+    "            label_name = \"Default\" if label == 1 else \"No Default\"\n",
+    "            print(f\"      Class {int(label)} ({label_name}): {count:,} ({count / len(y) * 100:.1f}%)\")\n",
     "        \n",
     "        return X, y\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"❌ Failed to load data from '{INPUT_TABLE}': {e}\")\n",
-    "        print(\"💡 Verify the table exists and contains required columns\")\n",
+    "        print(f\"❌ Failed to load data from '{PREPROCESSED_TABLE}': {e}\")\n",
+    "        print(\"💡 Make sure data_preparation.py has been run successfully\")\n",
+    "        print(\"💡 Verify the table exists: workspace.ml_credit_risk.credit_risk_preprocessed\")\n",
     "        raise\n",
-    "\n",
-    "# ==================================================================================\n",
+    " \n",
     "# ✅ TRAIN SINGLE EXPERIMENT\n",
-    "# ==================================================================================\n",
+    "\n",
     "def train_single_experiment(X, y, params, run_name):\n",
     "    \"\"\"\n",
     "    Train a single Random Forest Classifier configuration\n",
     "    \n",
     "    Args:\n",
-    "        X: Feature matrix\n",
+    "        X: Feature matrix (numpy array from preprocessed data)\n",
     "        y: Target labels\n",
-    "        params: Model hyperparameters from config.yml\n",
+    "        params: Model hyperparameters from experiments.yml\n",
     "        run_name: Name for MLflow run\n",
     "    \n",
     "    Returns:\n",
@@ -220,6 +230,8 @@
     "        mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
     "        mlflow.log_param(\"experiment_name\", run_name)\n",
     "        mlflow.log_param(\"timestamp\", datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "        mlflow.log_param(\"data_source\", PREPROCESSED_TABLE)\n",
+    "        mlflow.log_param(\"preprocessed\", True)\n",
     "        \n",
     "        # Log all hyperparameters\n",
     "        for param_name, param_value in params.items():\n",
@@ -229,6 +241,7 @@
     "        mlflow.log_param(\"train_size\", len(X_train))\n",
     "        mlflow.log_param(\"test_size\", len(X_test))\n",
     "        mlflow.log_param(\"stratified_split\", STRATIFY)\n",
+    "        mlflow.log_param(\"num_features\", X.shape[1])\n",
     "\n",
     "        # Train model\n",
     "        print(f\"\\n🏋️ Training Random Forest Classifier...\")\n",
@@ -322,19 +335,19 @@
     "            model,\n",
     "            artifact_path=MODEL_ARTIFACT_PATH,\n",
     "            signature=signature,\n",
-    "            registered_model_name=None  # Will register later in evaluation script\n",
+    "            registered_model_name=None  # Will register later via evaluation script\n",
     "        )\n",
     "\n",
     "        # Log feature importance\n",
     "        if hasattr(model, 'feature_importances_'):\n",
     "            feature_importance = pd.DataFrame({\n",
-    "                'feature': FEATURE_COLS,\n",
+    "                'feature_index': range(len(model.feature_importances_)),\n",
     "                'importance': model.feature_importances_\n",
     "            }).sort_values('importance', ascending=False)\n",
     "            \n",
     "            print(f\"\\n🎯 Top 10 Most Important Features:\")\n",
     "            for idx, row in feature_importance.head(10).iterrows():\n",
-    "                print(f\"   {row['feature']:<25} {row['importance']:.4f}\")\n",
+    "                print(f\"   Feature {row['feature_index']:<5} Importance: {row['importance']:.4f}\")\n",
     "            \n",
     "            # Log as artifact\n",
     "            importance_file = \"feature_importance.csv\"\n",
@@ -345,10 +358,9 @@
     "        print(f\"{'='*70}\")\n",
     "\n",
     "        return run_id, metrics_dict\n",
-    "\n",
-    "# ==================================================================================\n",
+    " \n",
     "# ✅ MAIN EXECUTION\n",
-    "# ==================================================================================\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    # Initialize MLflow\n",
@@ -371,8 +383,8 @@
     "        print(f\"❌ Failed to initialize Spark: {e}\")\n",
     "        raise\n",
     "\n",
-    "    # Load data\n",
-    "    X, y = load_data(spark)\n",
+    "    # Load preprocessed data\n",
+    "    X, y = load_preprocessed_data(spark)\n",
     "\n",
     "    # Load experiment configurations\n",
     "    config = load_experiment_configs()\n",
@@ -459,14 +471,14 @@
     "\n",
     "    # Next steps\n",
     "    print(\"\\n📌 Next Steps:\")\n",
-    "    print(\"   1. Run model_evaluation.py to evaluate ALL models\")\n",
-    "    print(\"   2. Best model will be selected and registered\")\n",
+    "    print(\"   1. Run evaluation.py to evaluate and register best models\")\n",
+    "    print(\"   2. Models passing duplicate check will be registered\")\n",
     "    print(\"   3. Continue with UAT → Production promotion\")\n",
     "    \n",
     "    print(f\"\\n💡 Note:\")\n",
     "    print(f\"   All {len(run_results)} models logged to: {EXPERIMENT_NAME}\")\n",
     "    print(f\"   Evaluation will compare based on: {PRIMARY_METRIC}\")\n",
-    "    print(f\"   Models passing thresholds will be registered automatically\")\n",
+    "    print(f\"   Duplicate detection tolerance: 0.001\")\n",
     "    \n",
     "    # Save task values for workflow\n",
     "    try:\n",
