changes in code

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -96,9 +96,9 @@
     "\n",
     "print(\"=\" * 80)\n",
     " \n",
-    "# ✅ LOAD EXPERIMENT CONFIGURATIONS (experiments.yml)\n",
+    "# ✅ LOAD EXPERIMENT CONFIGURATIONS (config.yml)\n",
     "\n",
-    "def load_experiment_configs(path=\"experiments.yml\"):\n",
+    "def load_experiment_configs(path=\"config.yml\"):\n",
     "    \"\"\"Load Random Forest hyperparameter configurations\"\"\"\n",
     "    print(f\"\\n📄 Step 2: Loading experiment configurations from {path}...\")\n",
     "    \n",
