changes in train.py file

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -12,12 +12,6 @@
    "outputs": [],
    "source": [
     "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FIXED VERSION\n",
-    "# ==================================================================================\n",
-    "# ✅ Uses PREPROCESSED data from data_preparation.py output\n",
-    "# ✅ Fully integrated with pipeline_config.yml and experiments.yml\n",
-    "# ✅ Handles PySpark Vector format from preprocessing\n",
-    "# ✅ Logs all experiments to MLflow\n",
-    "# ==================================================================================\n",
     "\n",
     "%pip install scikit-learn pyyaml\n",
     "\n",
@@ -243,17 +237,24 @@
     "        mlflow.log_param(\"stratified_split\", STRATIFY)\n",
     "        mlflow.log_param(\"num_features\", X.shape[1])\n",
     "\n",
-    "        # Train model\n",
+    "                # Train model\n",
     "        print(f\"\\n🏋️ Training Random Forest Classifier...\")\n",
     "        start_time = time.time()\n",
-    "        \n",
+    "\n",
+    "        # --- FIX: Remove duplicate random_state from config file ---\n",
+    "        if \"random_state\" in params:\n",
+    "            print(\"⚠️ Removing duplicate random_state from params (config controlled).\")\n",
+    "            params.pop(\"random_state\")\n",
+    "\n",
+    "        # Create model\n",
     "        model = RandomForestClassifier(\n",
-    "            random_state=RANDOM_STATE,\n",
+    "            random_state=RANDOM_STATE,   # pipeline control source of truth\n",
     "            **params\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        model.fit(X_train, y_train)\n",
     "        train_time = time.time() - start_time\n",
+    "\n",
     "        \n",
     "        print(f\"   ✅ Training completed in {train_time:.2f} seconds\")\n",
     "        mlflow.log_metric(\"train_time\", train_time)\n",
